# automation-test-project

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  pyproject.toml  setup.sh
src/: .env.example  .gitignore  conftest.py  requirements.txt
src/api/: __init__.py  balance.py  base.py  category.py  group.py  transaction.py  user.py
src/config/: settings.py
src/core/: __init__.py  base_action.py  decorators.py  logger.py  page_factory.py
src/data/: i18n.py
src/pages/: __init__.py  balance_page.py  base_page.py  group_detail_page.py  group_settings_page.py  groups_page.py  login_page.py  profile_page.py  rules_page.py
src/tests/: test_api.py  test_auth.py  test_balance.py  test_groups.py  test_multi_person_group.py  test_profile.py  test_rules.py  test_settings.py  test_transactions.py
src/utils/: __init__.py  auth_helper.py
