[project]
name = "automation-test-project"
version = "1.0.0"
description = "E2E Automation Testing Framework"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.3.4",
    "playwright>=1.49.1",
    "pytest-playwright>=0.6.2",
    "allure-pytest>=2.13.5",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "pytest-timeout>=2.3.0",
    "pytest-assume>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pre-commit>=3.0.0",
    "pytest-xdist>=3.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["src"]

markers = [
    "smoke: Critical path tests, run on every deploy",
    "auth: Authentication & authorization tests",
    "groups: Group CRUD tests",
    "transactions: Transaction tests",
    "profile: Profile tests",
    "balance: Balance & settlement tests",
    "settings: Group settings tests",
    "api: API-only tests (no browser)",
    "multigroup: Multi-person group tests (shared group with 2+ members)",
    "rules: Recurring rules tests",
    "budget: Budget management tests",
    "regression: Full regression suite",
    "slow: Tests that take > 10s",
]

addopts = [
    "-v",
    "-s",
    "--tb=short",
    "--dist=loadscope",
    "--strict-markers",
    "--alluredir=allure-results",
    "--clean-alluredir",
]

timeout = 60

log_cli = false

log_file = "logs/pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s | %(levelname)-8s | %(name)s:%(funcName)s:%(lineno)d - %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
